--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>ru.javamentor</groupId>
-  <artifactId>spring-mvc</artifactId>
+  <groupId>web</groupId>
+  <artifactId>spring-mvc-crud</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <packaging>war</packaging>
@@ -115,7 +115,7 @@
           <version>${maven-war-plugin.version}</version>
           <configuration>
             <warSourceDirectory>src/webapp</warSourceDirectory>
-            <warName>pp222</warName>
+            <warName>pp231</warName>
             <failOnMissingWebXml>false</failOnMissingWebXml>
           </configuration>
         </plugin>
@@ -132,7 +132,7 @@
         </configuration>
       </plugin>
     </plugins>
-    <finalName>pp222</finalName>
+    <finalName>pp231</finalName>
   </build>
 
 </project>
