--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,3 +1,4 @@
+# I suppress all console log messages, prefer using log file only.
 # appender.console.type = Console
 # appender.console.name = STDOUT
 # appender.console.layout.type = PatternLayout
@@ -5,7 +6,7 @@
 
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName=/opt/tomcat9/logs/log4j2.log
+appender.file.fileName=/opt/tomcat9/logs/log_pp231.log
 appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 appender.file.filter.threshold.type = ThresholdFilter
