--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
       <type>pom</type>
     </dependency>
 
+    <!-- JSONer -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.8</version>
+    </dependency>
+
   </dependencies>
 
   <build>
